<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".detailmovie.view.DetailMovieActivity">

    <data>
        <variable
            name="model"
            type="com.example.testskillcondorlabsjg.detailmovie.viewmodel.DetailMovieViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tittle_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:textSize="30sp"
            android:text="@string/detalle"/>

        <TextView
            android:id="@+id/tittle_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tittle_detail"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:text="@string/resumen"/>

        <TextView
            android:id="@+id/overview_movie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tittle_overview"
            app:layout_constraintEnd_toEndOf="@id/tittle_overview"
            android:layout_marginStart="50dp"/>

        <TextView
            android:id="@+id/tittle_release"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/overview_movie"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:text="@string/fecha_de_lanzamiento"/>

        <TextView
            android:id="@+id/date_release_movie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tittle_release"
            app:layout_constraintEnd_toEndOf="@id/tittle_release"
            android:layout_marginStart="50dp"/>


        <TextView
            android:id="@+id/tittle_budget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/date_release_movie"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:text="@string/presupuesto"/>

        <TextView
            android:id="@+id/budget_movie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tittle_budget"
            app:layout_constraintEnd_toEndOf="@id/tittle_budget"
            android:layout_marginStart="50dp"/>

        <TextView
            android:id="@+id/tittle_trailer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/budget_movie"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:text="@string/trailer"/>

        <TextView
            android:id="@+id/trailer_movie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tittle_trailer"
            app:layout_constraintEnd_toEndOf="@id/tittle_trailer"
            android:layout_marginStart="50dp"/>

        <TextView
            android:id="@+id/tittle_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/trailer_movie"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:text="@string/es_favorito"/>

        <ToggleButton
            android:id="@+id/is_favorite_toggle"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:layout_constraintTop_toBottomOf="@id/tittle_favorite"
            app:layout_constraintStart_toEndOf="@id/tittle_favorite"
            android:layout_marginStart="50dp"
            android:textOn=""
            android:textOff=""/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>